src/objects/Position_Programming_Language__c.object
<CustomObject>
    <fields>
        <fullName>Language_Name__c</fullName>
        <formula>Programming_Language__r.Language_Name__c</formula>
        <label>Language Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Position Programming Languages</relationshipLabel>
        <relationshipName>Position_Programming_Languages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Programming_Language__c</fullName>
        <label>Programming Language</label>
        <referenceTo>Programming_Language__c</referenceTo>
        <relationshipLabel>Position Programming Languages</relationshipLabel>
        <relationshipName>R00N58000002CpOkEAK</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Position Programming Language</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPL-{0000}</displayFormat>
        <label>Position Programming Language Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Programming Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>